footer margin, overflow fix

--- a/main.css
+++ b/main.css
@@ -323,6 +323,7 @@ input[type=radio]:checked + label:before {
 }
 .bott{
 	height: auto;
+	overflow: hidden;
 }
 .bott:after{
 content: "";
@@ -395,7 +396,7 @@ footer{
 	min-height: 300px;
 	background-color: #292929;
 	font-size: small;
-	float:left;
+	margin-bottom: 10px;
 }
 footer p:first-child{
 	text-align: center;
